# acp7r-aws-sdk

./: .gitignore  Cargo.toml  README.md
sdk/aws-config/: Cargo.toml
sdk/aws-endpoint/: Cargo.toml
sdk/aws-http/: Cargo.toml
sdk/aws-hyper/: Cargo.toml
sdk/aws-sig-auth/: Cargo.toml
sdk/aws-sigv4/: Cargo.toml
sdk/aws-smithy-async/: Cargo.toml
sdk/aws-smithy-client/: Cargo.toml
sdk/aws-smithy-eventstream/: Cargo.toml
sdk/aws-smithy-http/: Cargo.toml
sdk/aws-smithy-http-tower/: Cargo.toml
sdk/aws-smithy-json/: Cargo.toml
sdk/aws-smithy-protocol-test/: Cargo.toml
sdk/aws-smithy-query/: Cargo.toml
sdk/aws-smithy-types/: Cargo.toml
sdk/aws-smithy-types-convert/: Cargo.toml
sdk/aws-smithy-xml/: Cargo.toml
sdk/aws-types/: Cargo.toml
sdk/ec2/: Cargo.toml
sdk/ec2/src/: client.rs  config.rs  error.rs  error_meta.rs  idempotency_token.rs  input.rs  lens.rs  lib.rs  model.rs  operation.rs  operation_deser.rs  operation_ser.rs  output.rs  paginator.rs  query_ser.rs  xml_deser.rs
sdk/route53/: Cargo.toml
sdk/route53/src/: client.rs  config.rs  error.rs  error_meta.rs  input.rs  lib.rs  model.rs  operation.rs  operation_deser.rs  output.rs  paginator.rs  xml_deser.rs  xml_ser.rs
sdk/sso/: Cargo.toml
sdk/sso/src/: aws_endpoint.rs  client.rs  config.rs  error.rs  http_serde.rs  input.rs  json_deser.rs  json_errors.rs  lens.rs  lib.rs  model.rs  operation.rs  operation_deser.rs  output.rs  paginator.rs
sdk/ssooidc/: Cargo.toml
sdk/ssooidc/src/: aws_endpoint.rs  client.rs  config.rs  error.rs  input.rs  json_deser.rs  (+4 more)
sdk/sts/: Cargo.toml
(+10 files in other folders)
