[workspace]
members = [
    "sdk/aws-config",
    "sdk/aws-endpoint",
    "sdk/aws-http",
    "sdk/aws-hyper",
    "sdk/aws-sig-auth",
    "sdk/aws-sigv4",
    "sdk/aws-smithy-async",
    "sdk/aws-smithy-client",
    "sdk/aws-smithy-eventstream",
    "sdk/aws-smithy-http",
    "sdk/aws-smithy-http-tower",
    "sdk/aws-smithy-json",
    "sdk/aws-smithy-protocol-test",
    "sdk/aws-smithy-query",
    "sdk/aws-smithy-types",
    "sdk/aws-smithy-types-convert",
    "sdk/aws-smithy-xml",
    "sdk/aws-types",
    "sdk/ec2",
    "sdk/route53",
    "sdk/sso",
    "sdk/ssooidc",
    "sdk/sts"
]